# ur-mediathek-downloader

./: .gitignore  LICENSE  Makefile  README.md  audio.py  channel.py  download_audio.py  download_video.py  gui.py  pyproject.toml  requirements.txt  util.py  video.py  vlc_wrapper.py
